<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Paratör</string>
    <string name="keypad">Keypad</string>
    <string name="library">Library</string>
    <string name="no_sale">No Sale</string>
    <string name="charge">Charge</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_discount">Edit Discount</string>
    <string name="create_discount">Create Discount</string>
    <string name="create_category">Create Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="create_unit">Create Unit</string>
    <string name="edit_unit">Edit Unit</string>
    <string name="delete_unit">Delete Unit</string>
    <string name="delete_category">Delete Category</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_tax">Delete Tax</string>
    <string name="create_tax">Create Tax</string>
    <string name="edit_tax">Edit Tax</string>
    <string name="add_options">Add Options</string>
    <string name="add_options_desc">Add a custom set of options to an item to create variations. </string>
    <string name="options">Options</string>
    <string name="price_and_inventory">Price and inventory</string>
    <string name="unit_type">Unit Type</string>
    <string name="inventory_desc">Choose between selling whole or decimal quantities for this item</string>
    <string name="add_variation">Add Variation</string>
    <string name="description">Description</string>
    <string name="select_unit">Select Unit</string>
    <string name="select_tax">Select Tax</string>
    <string name="select_category">Select Category</string>
    <string name="category">Category</string>
    <string name="delete_item">Delete Item</string>
    <string name="create_customer">Create Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="view_groups">View Groups</string>
    <string name="delete_discount">Delete Discount</string>
    <string name="create_group">Create a Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="group_name">Group Name</string>
    <string name="edit_group">Edit Group</string>
    <string name="add_note">Add Note</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="clear_sale">Clear Sale</string>
    <string name="question_are_you_sure">Are you sure?</string>
    <string name="current_sale">Current Sale</string>
    <string name="add_customer">Add Customer</string>
    <string name="clear_items">Clear Items</string>
    <string name="total">Total</string>
    <string name="price_upper">PRICE</string>
    <string name="quantity_upper">QUANTITY</string>
    <string name="notes_upper">NOTES</string>
    <string name="discounts_upper">DISCOUNTS</string>
    <string name="remove_item">Remove Item</string>
    <string name="remove_customer">Remove Customer</string>
    <string name="all_items">All Items</string>
    <string name="unit_undefined">Unit Undefined</string>
    <string name="tax_amount">TAX AMOUNT</string>
    <string name="new_receipt">New Receipt</string>
    <string name="order_refund">Order Refund</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="items_and_services">ITEMS AND SERVICES</string>
    <string name="payments">PAYMENTS</string>
    <string name="cash_payment">CASH PAYMENT</string>
    <string name="card_payment">CARD PAYMENT</string>
    <string name="card_price_upper" tools:ignore="ExtraTranslation">KART TUTARI</string>
    <string name="cash_price_upper" tools:ignore="ExtraTranslation">NAKİT TUTAR</string>
    <string name="card">Card</string>
    <string name="subtotal">Subtotal</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="included">Included</string>
    <string name="reason_for_refund">REASON FOR REFUND</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="welcome">WELCOME</string>
    <string name="screenshot">Screenshot</string>
    <string name="there_is_no_search_result">There is no search result</string>
    <string name="create_item">Create Item</string>
    <string name="createDiscount">Create Discount</string>
    <string name="amount">Amount</string>
    <string name="discount_name">Discount Name</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="category_name">Category Name</string>
    <string name="categories">Categories</string>
    <string name="discounts" tools:ignore="ExtraTranslation, MissingTranslation">İndirimler</string>
    <string name="unit_name">Unit Name</string>
    <string name="units">Units</string>
    <string name="tax_name">Tax Name</string>
    <string name="taxes">Taxes</string>
    <string name="price">Price</string>
    <string name="variable">Variable</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="tax_upper">TAX</string>
    <string name="store_name">Store Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="username_empty_error">Username can not be empty!</string>
    <string name="email_empty_error">Email can not be empty!</string>
    <string name="email_invalid_error">Please type a valid email address!</string>
    <string name="password_empty_error">Password can not be empty!</string>
    <string name="password_length_error">Password length must be at least 6!</string>
    <string name="logging_user">Logging User...</string>
    <string name="invalid_username_or_password">Invalid username or password!</string>
    <string name="register">Register</string>
    <string name="registering_user">Registering User...</string>
    <string name="email_is_defined_before">The system has such a email. Please set a different username.</string>
    <string name="product_category_can_not_be_empty">Please select a category</string>
    <string name="end_editing">End Editing</string>
    <string name="editing_mode">Editing Mode</string>
    <string name="please_type_first_name">Please type first name</string>
    <string name="please_type_last_name">Please type last name</string>
    <string name="choose_a_contact">Choose a Contact</string>
    <string name="add_to_group">Add to Group</string>
    <string name="select_group">Select a Group</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="select_customers">Select Customers</string>
    <string name="delete_customers">Delete Customers</string>
    <string name="split_amount">Split Amount</string>
    <string name="select_payment_type_below">Select payment type below</string>
    <string name="tender">Pay</string>
    <string name="cash">Cash</string>
    <string name="split_by_amount">Splıt By Amount</string>
    <string name="continue_text">Continue</string>
    <string name="split_into_equal_payment">SPLIT INTO EQUAL PAYMENTS</string>
    <string name="custom">Custom</string>
    <string name="number_of_splits">Number of Splits</string>
    <string name="split_equality">Split Equality</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="new_sale">New Sale</string>
    <string name="no_change">No Change</string>
    <string name="how_like_your_receipt">How would you like your receipt?</string>
    <string name="no_receipt">No Receipt</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="receipt">Receipt</string>
    <string name="purchase_subtotal">Purchase Subtotal</string>
    <string name="payment_type">Payment Type</string>
    <string name="please_type_store_name">Please Type Store Name</string>
    <string name="please_type_phone_number">Please enter the phone number</string>
    <string name="please_select_country">Please select your country</string>
    <string name="please_select_type_of_biusiness">Please select type of business</string>
    <string name="please_select_estimated_annual_turnover">Please select estimated annual turnover</string>
    <string name="please_select_number_of_locations">Please select number of locations</string>
    <string name="please_select_trading_currency">Please select trading currency</string>
    <string name="choose_a_retail_category">Choose a retail category</string>
    <string name="choose_how_many_locs_you_have">Locations you have</string>
    <string name="location">location(s)</string>
    <string name="choose_annual_turnover_range">Estimated ann. turnover range</string>
    <string name="choose_trading_currency">Choose trading currency</string>
    <string name="change">Change</string>
    <string name="credit_card_payment_info">This amount (including tip) is used for tracking purposes only. You will not receive a deposit for this transaction.</string>
    <string name="credit_card_tip_info">Tip amounts are listed seperately in your orders reports.</string>
    <string name="tip">Tip</string>
    <string name="provide_email_description">Provide your email to receive a digital receipt from this business.</string>
    <string name="email_address">Email Address</string>
    <string name="receipt_from_my_business">Receipt from My Business</string>
    <string name="gross_sales">Gross Sales</string>
    <string name="net_sales">Net Sales</string>
    <string name="dismiss">Dismiss</string>
    <string name="sales_count">Sales Count</string>
    <string name="checkout">Checkout</string>
    <string name="transactions">Transactions</string>
    <string name="reports">Reports</string>
    <string name="customers">Customers</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="notifications">Notifications</string>
    <string name="add_from_address_book">Add From Address Book</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">ADDRESS</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address2">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="other_information">OTHER INFORMATION</string>
    <string name="checkout_options">CHECKOUT OPTIONS</string>
    <string name="security">SECURITY</string>
    <string name="hardware">HARDWARE</string>
    <string name="device">DEVICE</string>
    <string name="orders">ORDERS</string>
    <string name="passcodes">Passcodes</string>
    <string name="printers">Printers</string>
    <string name="device_name">Device Name</string>
    <string name="alerts">Alerts</string>
    <string name="print_orders">Print Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="learn_more_upper">LEARN MORE</string>
    <string name="visit_our_support_center">Visit our Support Center</string>
    <string name="visit_our_support_center_desc">Search and browse support articles</string>
    <string name="system_status">System Status</string>
    <string name="system_status_desc">Check the status of Paratör services</string>
    <string name="frequently_asked_questions_upper">FREQUENTLY ASKED QUESTIONS</string>
    <string name="create_sales_report">Create Sales Report</string>
    <string name="troubleshot_your_pos">Troubleshoot Your Point of Sale</string>
</resources>