<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/grossSales"
        android:orderInCategory="100"
        android:title="@string/gross_sales"
        app:showAsAction="never" />

    <item
        android:id="@+id/netSales"
        android:orderInCategory="100"
        android:title="@string/net_sales"
        app:showAsAction="never" />

    <item
        android:id="@+id/salesCount"
        android:orderInCategory="100"
        android:title="@string/sales_count"
        app:showAsAction="never" />

    <item
        android:id="@+id/dismiss"
        android:orderInCategory="100"
        android:title="@string/dismiss"
        app:showAsAction="never" />

</menu>

