<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainll"
    android:background="@color/White">

    <include layout="@layout/toolbar_item_update"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnAddFromAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_button_length_size"
                android:layout_marginTop="20dp"
                android:text="@string/add_from_address_book"
                android:textColor="@color/DodgerBlue"
                android:textAllCaps="false"
                android:background="@drawable/custom_button_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/select_list_tv_size"
                android:textColor="@color/Black">
            </TextView>


            <EditText
                android:id="@+id/firstNameEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/first_name"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/lastNameEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/last_name"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/phoneNumberEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/select_list_tv_size"
                android:textColor="@color/Black">
            </TextView>

            <EditText
                android:id="@+id/countryEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/country"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/cityEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/city"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/addressEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/address2"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/postalCodeEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_edittext_height_size"
                android:background="@drawable/custom_edittext_bg"
                android:drawablePadding="20dp"
                android:hint="@string/postal_code"
                android:inputType="text"
                android:paddingLeft="8dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/DarkGray"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_information"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/select_list_tv_size"
                android:textColor="@color/Black">
            </TextView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>