<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_item_update" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/White"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/mainVertll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@color/White"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/checkout_options"
                android:gravity="center|start"
                android:textStyle="bold">


            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/security"
                android:gravity="center|start"
                android:textStyle="bold">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/passcodes"
                    android:gravity="center|start"
                    android:textColor="@color/Black"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                    android:layout_alignParentEnd="true">

                </ImageView>


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/hardware"
                android:gravity="center|start">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/printers"
                    android:gravity="center|start"
                    android:textColor="@color/Black"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                    android:layout_alignParentEnd="true">

                </ImageView>


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/device"
                android:gravity="center|start">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/device_name"
                    android:gravity="center|start"
                    android:textColor="@color/Black"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                    android:layout_alignParentEnd="true">

                </ImageView>


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/orders"
                android:gravity="center|start">
            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/alerts"
                    android:gravity="center|start"
                    android:textColor="@color/Black"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                    android:layout_alignParentEnd="true">

                </ImageView>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/printOrdersRl">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/print_orders"
                    android:gravity="center|start"
                    android:textColor="@color/Black"
                    android:textStyle="bold">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
                    android:layout_alignParentEnd="true">

                </ImageView>


            </RelativeLayout>


            <Button
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_button_length_size"
                android:layout_marginTop="20dp"
                android:text="@string/sign_out"
                android:textColor="@color/DodgerBlue"
                android:textAllCaps="false"
                android:background="@drawable/custom_button_bg"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>