<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/productMainll">

    <include layout="@layout/toolbar_including_back_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn_more_upper"
            android:textColor="@color/Black"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/default_size_15sp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/Silver" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:id="@+id/visitSupportCenterll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_our_support_center"
                android:textColor="@color/DodgerBlue"
                android:textStyle="bold"
                android:textSize="@dimen/default_size_15sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_our_support_center_desc"
                android:textColor="@color/Silver"
                android:textSize="@dimen/default_size_13sp"
                android:paddingBottom="10dp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Silver" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:id="@+id/systemStatusll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_status"
                android:textColor="@color/DodgerBlue"
                android:textStyle="bold"
                android:textSize="@dimen/default_size_15sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_status_desc"
                android:textColor="@color/Silver"
                android:textSize="@dimen/default_size_13sp"
                android:paddingBottom="10dp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Silver" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequently_asked_questions_upper"
            android:textColor="@color/Black"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/default_size_15sp"
            android:paddingTop="20dp">
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/Silver" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:id="@+id/createSalesReportll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_sales_report"
                android:textColor="@color/DodgerBlue"
                android:textStyle="bold"
                android:textSize="@dimen/default_size_15sp"
                android:paddingBottom="18dp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Silver" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:id="@+id/troubleShotll">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/troubleshot_your_pos"
                android:textColor="@color/DodgerBlue"
                android:textStyle="bold"
                android:textSize="@dimen/default_size_15sp"
                android:paddingBottom="18dp">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/Silver" />

        </LinearLayout>

    </LinearLayout>





</LinearLayout>